// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellAttachmentDownload should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;

exports[`ModelCellAttachmentDownload should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  baz
</DocumentFragment>
`;

exports[`ModelCellAttachmentDownload should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellAttachmentDownload uses display_name for link text 1`] = `
<DocumentFragment>
  <a
    href="https://example.com/image.png"
  >
    foo
  </a>
</DocumentFragment>
`;

exports[`ModelCellAttachmentDownload uses url for link text as fallback 1`] = `
<DocumentFragment>
  <a
    href="https://example.com/image.png"
  >
    https://example.com/image.png
  </a>
</DocumentFragment>
`;
